--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@
 
 html, {
   background-image: 'images/background.jpg';
+  background-color: #708090 ;
   margin: 0;
   padding: 0;
   font: helvetica;
