--- a/css/main.css
+++ b/css/main.css
@@ -16,5 +16,6 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 }
 
 ul li{
+  display: center;
     display:inline-block;
 }
