--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
-@import url(fontawesome.css);
-@import url(all.css);
-@import url(brands.css);
-@import url(regular.css);
-@import url(solid.css);
-@import url(v4-shims.css);
-@import url(v4-shims.min.css);
+@import url(css/fontawesome.css);
+@import url(css/all.css);
+@import url(css/brands.css);
+@import url(css/regular.css);
+@import url(css/solid.css);
+@import url(css/v4-shims.css);
+@import url(css/v4-shims.min.css);
 
 
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
