finally an image

--- a/css/main.css
+++ b/css/main.css
@@ -8,8 +8,7 @@
 
 
 html{
-  background-image: url("images/background.jpg");
-  background-repeat: repeat;
+  background: grey url("images/background.jpg") repeat center;
 }
 
 ul li{
