--- a/css/main.css
+++ b/css/main.css
@@ -6,9 +6,14 @@
 @import url("v4-shims.css");
 @import url("v4-shims.min.css");
 
+@@font-face {
+  font-family: fontawesome;
+  src: url(fonts/fa-regular-400.woff);
+}
 
-html{
-  background: grey url("images/background.jpg") repeat center;
+html,body {
+  background: grey url(images/background.jpg) repeat center;
+  font-family: fontawesome;
 }
 
 ul li{
