--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@
 html,body {
   background: grey url(images/background.jpg) repeat center;
   font-family: fontawesome;
+  padding-top: 15;
 }
 
 ul li{
