format that css

--- a/css/main.css
+++ b/css/main.css
@@ -12,11 +12,15 @@
 }
 
 html,body {
-  background: grey url(images/background.jpg) repeat center;
+  background: grey url(images/background.jpg);
   font-family: fontawesome;
-  padding-top: 15;
+  padding-top: 15px;
 }
 
 ul li{
     display:inline-block;
+}
+nav{
+  font-size: 20px;
+  font-family: sans-serif;
 }
