--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,9 @@ ul li{
   font-size: 20px;
   font-family: sans-serif;
   color: lime;
+  padding: 15px 32px;
+  margin: 4px 2px;
+  text-align: center;
 }
 footer{
   padding-top: 15px;
@@ -36,4 +39,5 @@ footer{
 .menu:hover {
   background-color: LightGray;
   color: white;
+  opacity: 0.6;
 }
