background color change

--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,7 @@ footer{
   padding-bottom: 15px;
 }
 .menu:hover {
-  background-color: Black;
+  background-color: black;
   color: white;
   opacity: 0.6;
 }
