--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@
   src: url(fonts/fa-regular-400.woff);
 }
 
-html,body {
+html,body,footer {
   background: grey url(images/background.jpg);
   font-family: sans-serif;
   color: white;
@@ -32,10 +32,7 @@ ul li{
   margin: 2px 2px;
   text-align: center;
 }
-footer{
-  padding-top: 15px;
-  padding-bottom: 15px;
-}
+
 .menu:hover {
   background-color: black;
   color: white;
