--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@
 }
 
 html,body,footer {
-  background: grey url(images/background.jpg);
+  background: grey url("images/background.jpg" center);
   font-family: sans-serif;
   color: white;
   padding-top: 15px;
