--- a/css/main.css
+++ b/css/main.css
@@ -14,8 +14,8 @@
 html,body,footer {
   background: grey url("images/background.jpg" center);
   font-family: sans-serif;
-  color: white;
-  padding-top: 100px;
+  background-color: grey;
+  padding-top: 10px;
   padding-bottom: 20px;
   padding-left: 15px;
   padding-right: 15px;
