--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ html,body,footer {
   padding-bottom: 20px;
   padding-left: 15px;
   padding-right: 15px;
-  margin-bottom: auto;
+  margin-bottom: 15px;
 }
 
 ul li{
