--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ html,body,footer {
   background-image: url("images/background.jpg");
   font-family: sans-serif;
   background-color: grey;
+  color: white;
   padding-top: 10px;
   padding-bottom: 20px;
   padding-left: 15px;
