added some grey

--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ ul li{
   font-size: 20px;
   font-family: sans-serif;
   color: lime;
-  background-color: ;
+  background-color: grey;
   padding: 15px 15px;
   margin: 2px 2px;
   text-align: center;
