--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ ul li{
   font-size: 20px;
   font-family: sans-serif;
   color: lime;
-  background-color: grey;
+  background-color: MediumSeaGreen;
   padding: 15px 15px;
   margin: 2px 2px;
   text-align: center;
@@ -38,6 +38,6 @@ ul li{
 
 .menu:hover {
   background-color: white;
-  color: lime;
+  color: grey;
   opacity: 0.3;
 }
