--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ ul li{
 .menu{
   font-size: 20px;
   font-family: sans-serif;
-  color: lime;
+  color: white;
   background-color: MediumSeaGreen;
   padding: 15px 15px;
   margin: 2px 2px;
