--- a/css/main.css
+++ b/css/main.css
@@ -22,8 +22,8 @@ html,footer,div,table{
 }
 
 body{
-  background: grey url("images/background.jpg");
-
+  /* background: grey url("images/background.jpg"); */
+  background: linear-gradient(gray, white, white);
 }
 ul li{
     float: center;
