remove that white

--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@ html,footer,div,table{
 
 body{
   /* background: grey url("images/background.jpg"); */
-  background: linear-gradient(gray, white, #383838);
+  background: linear-gradient(gray, , #383838);
 }
 ul li{
     float: center;
