--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,7 @@ body,footer,div,table{
 html{
   /* background: grey url("images/background.jpg"); */
   background: linear-gradient(gray, #383838, gray);
+  background-position: center;
 }
 ul li{
     float: inherit;
