--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,7 @@ ul li{
   font-size: 20px;
   font-family: sans-serif;
   color: white;
-  background-color: MediumSeaGreen;
+  background-color: #383838;
   padding: 15px 15px;
   margin: 2px 2px;
   text-align: center;
