--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@
   src: url(fonts/fa-regular-400.woff);
 }
 
-body,footer,div,table{
+body,div,table{
   font-family: sans-serif;
   color: white;
   padding-top: 10px;
@@ -46,4 +46,15 @@ ul,li{
   /* background-color: white; */
   color: grey;
   opacity: 0.3;
+}
+
+footer{
+  position: relative;
+  font-family: sans-serif;
+  color: white;
+  padding-top: 10px;
+  padding-bottom: 20px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-bottom: 15px;
 }
