--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,7 @@ ul,li{
 .menu{
   font-size: 20px;
   font-family: sans-serif;
+  border-radius: 2px;
   color: white;
   background-color: #383838;
   padding: 15px 15px;
