--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,7 @@ ul,li{
   font-size: 20px;
   font-family: sans-serif;
   border-radius: 2px;
-  /* color: white; */
+  color: white;
   background-color: #383838;
   padding: 15px 15px;
   margin: 2px 2px;
