--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,18 @@ footer{
   margin-bottom: 15px;
 }
 
-.dropdown {
+.dropdown{
     float: left;
     overflow: hidden;
+}
+
+.dropbtn{
+  font-size: 20px;
+  font-family: sans-serif;
+  border-radius: 2px;
+  color: white;
+  background-color: #383838;
+  padding: 15px 15px;
+  margin: 2px 2px;
+  text-align: center;
 }
