no more icon border

--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,7 @@ ul,li{
 .menu{
   font-size: 20px;
   font-family: sans-serif;
+  border: none;
   border-radius: 2px;
   color: white;
   background-color: #383838;
