--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,7 @@ ul,li{
   font-family: sans-serif;
   border: none;
   border-radius: 2px;
+  border-color: lime;
   color: white;
   background-color: #383838;
   padding: 15px 15px;
