fixed some css, footer is now in it's place

--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,7 @@ ul,li{
 
 .menu{
   font-size: 20px;
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;
   border: none;
   border-radius: 2px;
   border-color: lime;
@@ -59,11 +59,11 @@ ul,li{
 }
 
 footer{
-  position: relative;
+  position: fixed;
   font-family: sans-serif;
+  font-size: 10px;
   color: white;
-  padding-top: 10px;
-  padding-bottom: 20px;
+  padding-bottom: 5px;
   padding-left: 15px;
   padding-right: 15px;
   margin-bottom: 15px;
