--- a/css/main.css
+++ b/css/main.css
@@ -61,9 +61,7 @@ ul,li{
 footer{
   position: fixed;
   font-family: sans-serif;
-  font-size: 10px;
+  font-size: 12px;
   color: white;
-  padding-bottom: 5px;
-  padding-left: 50px;
-  padding-right: 50px;
+  width: 100%;
 }
