--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,9 @@ footer{
   position: fixed;
   font-family: sans-serif;
   font-size: 12px;
+  text-align: center;
   color: white;
   width: 100%;
+  left: 0;
+  bottom: 0;
 }
