--- a/css/main.css
+++ b/css/main.css
@@ -23,11 +23,20 @@ body,table{
   margin-bottom: 15px;
 }
 
-h1,h2{
+h1{
   font-family: 'Roboto', sans-serif;
   color: white;
   margin: auto;
   text-align: center;
+}
+
+h2{
+  font-family: 'Roboto', sans-serif;
+  text-align: justify;
+  color: white;
+  margin: auto;
+  margin-left: 45px;
+  margin-top: 50px;
 }
 
 div{
