--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ h2 {
   text-align: justify;
   color: white;
   margin: auto;
-  margin-left: 45px;
+  margin-left: 75px;
   margin-top: 50px;
 }
 
@@ -65,13 +65,23 @@ ul,li {
     float: inherit;
     display: inline-block;
     list-style-type: square;
+    font-style: oblique;
 }
 
-ul.p,li.p {
-    float: inherit;
-    display: block;
-    list-style-type: square;
+li.p {
+    margin-left: 50px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
+
+li.d {
+    margin-left: 60px;
+    margin-top: 10px;
+    margin-bottom: 5px;
+    font-style: italic;
+    font-size: 10px;
+}
+
 .menu {
   font-size: 20px;
   font-family: 'Roboto', sans-serif;
@@ -84,11 +94,30 @@ ul.p,li.p {
   margin: 2px 2px;
   text-align: center;
 }
+.postsb {
+  font-size: 12px;
+  font-family: 'Roboto', sans-serif;
+  border: none;
+  border-radius: 2px;
+  border-color: lime;
+  color: white;
+  background-color: #383838;
+  padding: 5px 5px;
+  margin: 2px 2px;
+  text-align: center;
 
-.menu:hover{
+}
+
+.postsb:hover {
   /* background-color: white; */
   color: grey;
-  opacity: 0.3;
+  opacity: 0.2;
+}
+
+.menu:hover {
+  /* background-color: white; */
+  color: grey;
+  opacity: 0.2;
 }
 
 .logo {
