--- a/css/main.css
+++ b/css/main.css
@@ -72,7 +72,7 @@ ul.p {
     float: inherit;
     display: inline-block;
     list-style-type: square;
-    align-self: center;
+    width: 50%;
 }
 
 li.p {
@@ -80,7 +80,7 @@ li.p {
     margin-top: 5px;
     margin-bottom: 5px;
     display: block;
-    align-self: auto;
+    width: 50%;
 }
 
 li.d {
@@ -89,6 +89,7 @@ li.d {
     margin-bottom: 5px;
     font-style: italic;
     font-size: 10px;
+    width: 50%;
 }
 
 .menu {
