foramtting left justified

--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,7 @@ h2.post {
     margin: auto;
     position: sticky;
     font-size: 30px;
+    vertical-align: middle;
 }
 
 html {
@@ -67,16 +68,17 @@ ul,li {
 
 
 ul.p {
-    float: inherit;
     display: block;
     list-style-type: square;
     margin-left: auto;
+    vertical-align: middle;
 }
 
 li.p {
     margin-top: 5px;
     margin-bottom: 5px;
     display: block;
+    vertical-align: middle;
 }
 
 li.d {
