changed sizing on readme, added download links and uploaded bash profile

--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,13 @@
   src: url(fonts/fa-regular-400.woff);
 }
 
+a:link {
+    color:lime;
+}
+
+a:visited {
+    color:darkgreen;
+}
 
 body,table {
   font-family: 'Roboto', sans-serif;
