--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ h1 {
   text-align: center;
 }
 
-div {
+notice {
   font-family: 'Roboto', sans-serif;
   color: white;
   margin: auto;
@@ -56,6 +56,20 @@ div {
 
 }
 
+div {
+  font-family: 'Roboto', sans-serif;
+  color: white;
+  margin: auto;
+  text-align: center;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+  margin-bottom: 5px;
+  width: 300px;
+  border: 2px solid white;
+
+}
 h2.post {
     font-family: 'Roboto', sans-serif;
     color: white;
