--- a/css/main.css
+++ b/css/main.css
@@ -44,14 +44,14 @@ h1 {
 notice {
   font-family: 'Roboto', sans-serif;
   color: white;
-  margin: auto;
   text-align: center;
   padding-top: 15px;
   padding-bottom: 15px;
   padding-left: 15px;
   padding-right: 15px;
   margin-bottom: 15px;
-  width: 300px;
+  margin-top: 15px;
+  width: 800px;
   border: 2px dashed white;
 
 }
