--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,7 @@ body,table {
 
 h1 {
   font-family: 'Roboto', sans-serif;
+  font-size: 30;
   color: white;
   margin: auto;
   text-align: center;
