change sizing and colors in css, also fixed icons on start

--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,7 @@ h1 {
 h3 {
   font-family: 'Roboto', sans-serif;
   font-size: 15px;
-  color: white;
+  color: orange;
   margin: auto;
   text-align: center;
 }
@@ -133,7 +133,7 @@ li.d {
   text-align: center;
 }
 .startmenu {
-  font-size: 40px;
+  font-size: 35px;
   font-family: 'Roboto', sans-serif;
   border: none;
   border-radius: 2px;
@@ -165,6 +165,12 @@ li.d {
 }
 
 .menu:hover {
+  /* background-color: white; */
+  color: grey;
+  opacity: 0.2;
+}
+
+.startmenu:hover {
   /* background-color: white; */
   color: grey;
   opacity: 0.2;
