--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ a:hover {
   color:gray;
 }
 
-body,table {
+body {
   font-family: 'Roboto', sans-serif;
   color: white;
   padding-top: 10px;
@@ -69,14 +69,13 @@ div {
   font-family: 'Roboto', sans-serif;
   color: white;
   margin: auto;
-  text-align: center;
+  text-align: inherit;
   padding-top: 5px;
   padding-bottom: 5px;
   padding-left: 5px;
   padding-right: 5px;
   margin-bottom: 5px;
-  width: 300px;
-  border: 2px solid white;
+  width: 150px;
 
 }
 h2.post {
@@ -97,7 +96,7 @@ html {
 
 ul,li {
     float: inherit;
-    display: inline-block;
+    display: inline;
 }
 
 
@@ -124,8 +123,6 @@ li.d {
   font-size: 18px;
   font-family: 'Roboto', sans-serif;
   border: none;
-  border-radius: 2px;
-  border-color: lime;
   color: white;
   background-color: #383838;
   padding: 10px 10px;
@@ -189,4 +186,29 @@ footer {
   width: 100%;
   left: 0;
   bottom: 10px;
+}
+
+.dropdown {
+    font-size: 18px;
+    font-family: 'Roboto', sans-serif;
+    border: none;
+    color: white;
+    background-color: #383838;
+    display: inline;
+    position: relative;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #383838;
+  font-size: 18px;
+  font-family: 'Roboto', sans-serif;
+  border: none;
+  color: white;
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: inline;
 }
