fixed formatting, uploading temporary new css

--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,7 @@ html {
 
 body {
   font-family: 'Roboto', sans-serif;
+  text-align: center;
   color: white;
   padding-top: 10px 20px 15px 15px 15px;
   margin-bottom: 15px;
