--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,8 @@ h1 {
 
 h2 {
   font-family: 'Roboto', sans-serif;
-  font-size: 25px;
+  font-size: 20px;
+  font-style: italic;
   color: white;
   margin: auto;
   text-align: center;
