update gta rp pages for proper navigation and stats page

--- a/css/gta.css
+++ b/css/gta.css
@@ -47,6 +47,16 @@ h2{
   text-align: center;
   text-shadow: 2px 1px #b30000;
 }
+
+h3{
+  font-size: 15px;
+  font-style: italic;
+  color: #e6e6e6;
+  margin: auto;
+  text-align: center;
+  text-shadow: 2px 1px #b30000;
+}
+
 notice {
   font-family: 'Roboto', sans-serif;
   color: white;
