--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,18 @@ html {
   background-attachment: fixed;
 }
 
+a:link {
+  color: #00e600;
+}
+
+a:visited {
+  color: green;
+}
+
+a:hover {
+  color: #8bc34a;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   text-align: center;
@@ -87,6 +99,22 @@ div {
   font-family: 'Roboto', sans-serif;
   color: white;
   display: inline-block;
+}
+
+table {
+  font-family: 'Roboto', sans-serif;
+  border-collapse: collapse;
+  width: 40%;
+}
+
+td, th {
+  border: 1px solid #ffffff;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #4d4d4d;
 }
 
 .update {
