--- a/css/gta.css
+++ b/css/gta.css
@@ -41,7 +41,7 @@ h1 {
 }
 
 h2 {
-  font-size: 30px;
+  font-size: 20px;
   color: #e6e6e6;
   margin: auto;
   text-align: center;
@@ -90,7 +90,7 @@ ul,li {
 .menu {
   font-size: 18px;
   font-family: 'Roboto', sans-serif;
-  border: none;
+  border: 1px solid gray;
   color: white;
   background-color: #383838;
   background-blend-mode: luminosity;
@@ -131,9 +131,10 @@ ul,li {
 }
 
 .menu:hover {
-  background-color: white;
-  color: grey;
-  opacity: 0.8;
+  background-color: #383838;
+  color: #ff9933;
+  opacity: 1.0;
+  border: 1px solid #ff9933;
 }
 
 .startmenu:hover {
