--- a/css/main.css
+++ b/css/main.css
@@ -74,6 +74,15 @@ h4 {
   text-align: center;
 }
 
+ul {
+  list-style-type: square;
+  border: 1px solid #8bc34a;
+  width: 33%;
+  margin: auto;
+  text-align: left;
+  font-size: 15px;
+}
+
 navigation {
  display: inline-block;
  align-content: center;
