--- a/css/gta.css
+++ b/css/gta.css
@@ -1,7 +1,14 @@
 /* Phantom Inc CSS for GTA RP __FEAR_AND_LOATHING_
    2019 - JD _ v2 */
 
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+/*  Import Fonts from Google!*/
+/*@import url('https://fonts.googleapis.com/css?family=Roboto');*/
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap');
+
+@font-face {
+  font-family: GTA;
+  src: url(fonts/pricedown_bl.ttf);
+}
 
 html {
   background-image: url("images/gta/01.jpg");
@@ -16,7 +23,7 @@ html {
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   color: white;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -26,7 +33,7 @@ body {
 }
 
 h1 {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   font-size: 30px;
   color: #e6e6e6;
   margin: auto;
@@ -59,11 +66,11 @@ h4 {
   padding: 2px 2px 2px 2px;
   text-align: center;
   text-shadow: 2px 1px #b30000;
-  width: 20%;
+  width: 60%;
 }
 
 notice {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   color: white;
   text-align: center;
   padding-top: 15px;
@@ -83,7 +90,7 @@ ul,li {
 
 .menu {
   font-size: 18px;
-  font-family: 'Roboto', sans-serif;
+  font-family: GTA;
   border: 1px solid gray;
   color: white;
   background-color: #383838;
@@ -91,37 +98,6 @@ ul,li {
   padding: 10px 10px;
   margin: 2px 2px;
   text-align: center;
-}
-.startmenu {
-  font-size: 35px;
-  font-family: 'Roboto', sans-serif;
-  border: none;
-  border-radius: 2px;
-  border-color: lime;
-  color: white;
-  background-color: #383838;
-  padding: 10px 10px;
-  margin: 2px 2px;
-  text-align: center;
-}
-.postsb {
-  font-size: 12px;
-  font-family: 'Roboto', sans-serif;
-  border: none;
-  border-radius: 2px;
-  border-color: lime;
-  color: white;
-  background-color: #383838;
-  padding: 5px 5px;
-  margin: 2px 2px;
-  text-align: center;
-
-}
-
-.postsb:hover {
-  /* background-color: white; */
-  color: grey;
-  opacity: 0.8;
 }
 
 .menu:hover {
@@ -131,19 +107,13 @@ ul,li {
   border: 1px solid #ff9933;
 }
 
-.startmenu:hover {
-  /* background-color: white; */
-  color: grey;
-  opacity: 0.8;
-}
-
 .logo {
-  box-shadow: 0 8px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 8px 8px 0 rgba(0,0,0,0.5);
 }
 
 footer {
   position: fixed;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   font-size: 15px;
   text-align: center;
   color: white;
@@ -159,7 +129,7 @@ table, tr {
 
 .dropdown {
     font-size: 18px;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
     border: none;
     color: white;
     background-color: #383838;
@@ -172,7 +142,7 @@ table, tr {
   position: absolute;
   background-color: #383838;
   font-size: 18px;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   border: none;
   color: white;
   z-index: 1;
