--- a/css/gta.css
+++ b/css/gta.css
@@ -90,7 +90,7 @@ ul,li {
 
 .menu {
   font-size: 18px;
-  font-family: GTA;
+  font-family: 'Roboto Condensed', sans-serif;
   border: 1px solid gray;
   color: white;
   background-color: #383838;
