--- a/css/main.css
+++ b/css/main.css
@@ -123,10 +123,53 @@ tr:nth-child(even) {
   background-color: #4d4d4d;
 }
 
-.update {
-    list-style: inside;
-    text-align: center;
-    display: block;
+.bubble {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px solid blue;
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+  border: 1px solid white;
+  color: white;
+  background-color: #383838;
+  padding: 16px 32px;
+  margin: 4px 2px;
+}
+
+.bubble .bubbletext {
+  visibility: hidden;
+  width: 200px;
+  background-color: black;
+  color: lime;
+  font-size: 15px;
+  text-align: center;
+  border-radius: 6px;
+  padding: 10px 15px;
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+  top: 60px;
+  left: 50%;
+  margin-left: -50%;
+  opacity: 0;
+  transition: opacity 1s;
+}
+
+.bubble .bubbletext::after {
+  content: "";
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent transparent black transparent;
+}
+
+.bubble:hover .bubbletext {
+  visibility: visible;
+  opacity: 1;
+  border: 1px solid #8bc34a;
 }
 
 .menu {
