--- a/css/shop.css
+++ b/css/shop.css
@@ -65,11 +65,10 @@ h4 {
 
 h5 {
   font-family: 'Roboto', sans-serif;
-  font-size: 30px;
-  font-style: italic;
+  font-size: 18px;
+  font-style: bold;
   color: white;
   margin: auto;
-  text-decoration: underline;
   text-align: center;
 }
 
@@ -105,6 +104,7 @@ div {
   font-family: 'Roboto', sans-serif;
   color: white;
   display: inline-block;
+  align-content: center;
 }
 
   .product {
