--- a/css/main.css
+++ b/css/main.css
@@ -175,7 +175,7 @@ tr:nth-child(even) {
 .menu {
   font-size: 16px;
   font-family: 'Roboto', sans-serif;
-  border: 1px solid white;
+  border: 1px solid #8bc34a;
   color: white;
   background-color: #383838;
   padding: 16px 32px;
@@ -184,9 +184,9 @@ tr:nth-child(even) {
 
 .menu:hover {
   background-color: #383838;
-  color: #8bc34a;
+  color: #FFA500;
   opacity: 1.5;
-  border: 1px solid #8bc34a;
+  border: 1px solid white;
 }
 
 .logo {
